--- a/daydreams/css/estilos.css
+++ b/daydreams/css/estilos.css
@@ -1,3 +1,11 @@
+body{
+}
+
+.titulos{
+	text-align: center;
+}
+
+
 #logo-menu{
 	width: 150px;
 	height: 100px;
@@ -5,15 +13,34 @@
 
 #logo-footer{
 	width: 100px;
-	height: 55px;
 }
 
-#footer{
+.footer{
 	background-color: #393D42;
 	clear: both;
+	height: 80px;
 }
 
 #redes{
 	float: left;
 }
 
+.center{
+	margin: 20px auto 0 auto;
+	display: block;
+}
+
+.contacto{
+	margin-top: 10%;
+}
+
+#copyright{
+	color: white;
+	margin-top: 10%;
+    margin-bottom: 0px;
+}
+
+.icono{
+	color: white;
+	font-size: 2.2em;
+}
