--- a/daydreams/css/estilos.css
+++ b/daydreams/css/estilos.css
@@ -1,14 +1,6 @@
-body{
-}
-
-.titulos{
-	text-align: center;
-}
-
-
 #logo-menu{
-	width: 150px;
-	height: 100px;
+	width: 130px;
+	height: 80px;
 }
 
 #logo-footer{
@@ -22,7 +14,7 @@ body{
 }
 
 #redes{
-	float: left;
+	float: right;
 }
 
 .center{
@@ -34,13 +26,61 @@ body{
 	margin-top: 10%;
 }
 
+.card{
+	border: none;
+}
+
+.card-img-top{
+	width: 320px;
+	height: 220px;
+}
+
 #copyright{
 	color: white;
 	margin-top: 10%;
     margin-bottom: 0px;
 }
 
-.icono{
+.icono-footer{
 	color: white;
-	font-size: 2.2em;
+	font-size: 2em;
 }
+
+.icono-contacto{
+	font-size: 2em;
+}
+
+/*eventos*/
+.morado{
+	color: #673AB7;
+}
+
+.eventos{
+	width: 100%;
+	padding-right: 0%;
+}
+
+.pad-d{
+	padding-right: 0% !important;
+}
+
+.pad-i{
+	padding-left: 0% !important;
+}
+
+.boton-ev{
+	text-decoration: none !important;
+	color: black;
+	background-color: #efb810;
+}
+
+/*estructuras*/
+.icono-des{
+	color: #efb810;
+	font-size: 4em;
+}
+
+
+
+
+
